adding hikari configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 logging.level.com.luv4code=debug
 server.port=8081
 lfc.brewery.beer-service-host=http://localhost:8080
+spring.profiles.active=localmysql
