adding activemq configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ logging.level.com.luv4code=debug
 server.port=8081
 lfc.brewery.beer-service-host=http://localhost:8080
 spring.profiles.active=localmysql
+
+#active mq user details
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
