--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
-logging.level.com.luv4code=debug
+spring.application.name=order-service
+logging.level.com=debug
 server.port=8081
 lfc.brewery.beer-service-host=http://localhost:8080
+
 spring.profiles.active=localmysql
 
 #active mq user details
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
+
+spring.data.jpa.repositories.bootstrap-mode=default
